# tma

./: .audit-report.md  .env.example  .gitignore  API_SURFACE_SPEC.md  APP-INTERFACES.md  BUSINESS_MODEL_SPEC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  COMPETITIVE_ADVANTAGE.md  CONTRIBUTING.md  DATA_MODEL_SPEC.md  INTERFACES.md  LICENSE  OBSERVABILITY_SPEC.md  PLAN.md  PRIOR-LICENSE-APACHE-2.0.txt  README.md  SECURITY.md  SETUP.md  SOC2_RUNBOOK.md  STAGE1_AGI_HOOKS.md  SUGGESTION_ENGINE_SPEC.md  UX_FLOW_SPEC.md  V1_9_ACCEPTANCE.md  V2_0_SPEC.md  V2_5_SPEC.md  V3_0_SPEC.md  V3_5_SPEC.md  VISUAL_DESIGN_SPEC.md  WHY_OSS_MONETIZES_SPEC.md  pyproject.toml
.claude/: settings.json
.github/: CLA.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  cla-check.yml  release.yml
app/: .gitignore  README.md  SHIP_READINESS_v1.13.md  SHIP_READINESS_v1.14.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.ts
app/_dogfood_screenshots/: dogfood.mjs  report.json
app/e2e/: 01-meetings-list-loads.spec.ts  02-new-meeting-flow.spec.ts  03-review-approve-all.spec.ts  04-settings-edit-save.spec.ts  05-crash-recovery.spec.ts  README.md  _setup.ts  smoke.spec.ts
app/playwright-tests/: smoke.spec.ts
app/resources/: .gitignore  README.md
app/scripts/: build_all.ps1  build_all.sh  build_bot.ps1  build_python.ps1
app/src/: App.tsx  global.d.ts  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: activity.rs  audit_log.rs  auth.rs  billing.rs  branding.rs  cloud_sync.rs  daemon.rs  email_verify.rs  inbox.rs  lib.rs  main.rs  marketplace.rs  memory_paths.rs  memory_search.rs  migration.rs  monitoring.rs  perf.rs  sso.rs  uri_handler.rs  ws_server.rs
app/src-tauri/src/agi/: ambient.rs  canvas.rs  canvas_writer.rs  co_thinker.rs  mention_extractor.rs  mod.rs  observations.rs  presence.rs  propose_lock.rs  review.rs  review_workflow.rs  sampling_bridge.rs  session_borrower.rs  suppression.rs  telemetry.rs
app/src-tauri/src/agi/templates/: catchup_hint.rs  common.rs  conflict.rs  deadline.rs  decision_drift.rs  llm_enrich.rs  long_thread.rs  mod.rs  newcomer_onboarding.rs  pattern_recurrence.rs  registry.rs
app/src-tauri/src/commands/: COMMANDS.md  active_agents.rs  activity.rs  agi_ambient.rs  ai_tools.rs  audit.rs  auth.rs  billing.rs  bot.rs  branding.rs  canvas.rs  canvas_agi.rs  co_thinker.rs  co_thinker_dispatch.rs  comments.rs  config.rs  daemon.rs  daily_notes.rs  demo_seed.rs  discord.rs  env.rs  error.rs  external.rs  fs.rs  git.rs  git_sync.rs  github.rs  identity.rs  inbox.rs  inbox_store.rs  invite.rs  loom.rs  marketplace.rs  meetings.rs  memory.rs  mod.rs  notion.rs  onboarding_chat.rs  paths.rs  personal_agents.rs  (+20 more)
app/src-tauri/src/personal_agents/: PARSER_STATUS.md  apple_intelligence.rs  claude_code.rs  codex.rs  cursor.rs  devin.rs  mod.rs  ms_copilot.rs  replit.rs  windsurf.rs
app/src-tauri/src/sources/: email.rs  github.rs  github_real.rs  lark.rs  linear.rs  mod.rs  slack_real.rs  teams.rs  voice_notes.rs  watcher.rs  writeback_log.rs  zoom.rs
app/src-tauri/tests/: daemon_test.rs  migration_test.rs  personal_agents_realworld.rs  sampling_bridge_smoke.rs  spawn_handshake_e2e.rs  updater_config_test.rs  ws_server_smoke.rs
app/tests/: AIExtractedMentionCard.test.tsx  AIToolSetupPage.test.tsx  AlignmentBars.test.tsx  DailyBriefCard.test.tsx  DemoModeBanner.test.tsx  OnboardingChat.test.tsx  PersonView.test.tsx  ProjectView.test.tsx  README.md  SetupWizard.test.tsx  SetupWizardBanner.test.tsx  SyncStatusIndicator.test.tsx  TangerineNotes.test.tsx  ThreadView.test.tsx  TimelineEvent.test.tsx  UpdaterCheck.test.tsx  WelcomeOverlay.test.tsx  WhatsNewBanner.test.tsx  active-agents.test.tsx  ai-tools.test.ts  ambient.test.tsx  audit-log.test.ts  branding.test.ts  canvas-agi.test.tsx  canvas.test.tsx  co-thinker.test.tsx  connection-banner.test.tsx  discord.test.ts  enrichment-listener.test.tsx  git.test.ts  graphs-beta1.test.tsx  home-strip.test.tsx  json-no-dup-keys.test.ts  license-banner.test.tsx  marketplace.test.ts  modal-confirms.test.tsx  platform.test.ts  routes.smoke.test.tsx  setup.ts  sso.test.ts  (+68 more)
bot/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bot/src/: config.ts  index.ts  meeting.ts  status.ts  transcript.ts  voice.ts  whisper.ts
bot/tests/: test_meeting_status.ts  test_transcript.ts  test_whisper_mock.ts
browser-ext/: .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
browser-ext/scripts/: gen-icons.mjs  zip.mjs
browser-ext/tests/: envelope.test.ts  manifest.test.ts  memory-client.test.ts  smart-inject.test.ts
demo/: README.md
demo/2026-04-22-david-tma-kickoff/: knowledge-diff.md  meeting.yaml  observations.md  status.yaml  summary.md  transcript.md
demo/target-knowledge-repo-snapshot/: CLAUDE.md
dogfood-prep/: CHECKLIST.md  SCREENSHOTS.md  SCRIPT.md  TESTER_README.md  VIDEO_SCRIPT.md
dogfood-prep/screenshots/: README.md
legacy/: README.md  list_devices.py  requirements.txt  transcribe.py
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: cli.ts  envelope.ts  memory.ts  resources.ts  sampling-bridge.ts  server.ts  sidecar.ts  tools.ts
mcp-server/tests/: envelope.test.ts  memory.test.ts  sampling-bridge.test.ts  server.test.ts  tools.test.ts
sources/: README.md
sources/calendar/: LICENSE  README.md  daemon-hook.md  package-lock.json  package.json  tsconfig.json
tests/: README.md  conftest.py  smoke_e2e.py  smoke_e2e.sh  test_adapter_types.py  test_briefs.py  test_claude_code_adapter.py  test_config.py  test_cursors.py  test_daemon_cli.py  test_diff_parser.py  test_event_router.py  test_event_router_wave1_15_w14.py  test_extractor.py  test_intent.py  test_meeting.py  test_memory.py  test_review_json.py  test_rms_smoke_e2e.py  test_state.py
(+467 files in other folders)
