[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tangerine-meeting-assistant"
version = "0.1.0"
description = "Your meeting -> your team's AI context, automatically."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Tangerine Intelligence" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "pyyaml>=6",
    "rich>=13",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1.8", "ruff>=0.4", "types-PyYAML"]

[project.scripts]
tmi = "tmi.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tmi.observer" = ["prompts/*.md"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
