[package]
name = "tangerine-meeting"
version = "1.5.4-beta.0"
description = "Tangerine AI Teams — desktop shell for the Tangerine Meeting Assistant CLI"
authors = ["Tangerine Intelligence Inc."]
license = "Apache-2.0"
repository = "https://github.com/Tangerine-Intelligence/tangerine-meeting-live"
edition = "2021"
rust-version = "1.78"

# T1 owns app metadata & window glue. T3 (this crate) owns the IPC commands
# in src/commands/*.rs and ships nothing UI-side. T1 is expected to add a
# `mod commands;` declaration and call `commands::register(builder)` from
# within their `main.rs` builder chain. Do not regenerate `main.rs` here.

[lib]
name = "tangerine_meeting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

notify = "6"
notify-debouncer-mini = "0.4"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

thiserror = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "winbase"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
