[package]
name = "tangerine-meeting"
version = "1.8.0-beta.2"
description = "Tangerine AI Teams — desktop shell for the Tangerine Meeting Assistant CLI"
authors = ["Tangerine Intelligence Inc."]
license = "Apache-2.0"
repository = "https://github.com/Tangerine-Intelligence/tangerine-meeting-live"
edition = "2021"
rust-version = "1.78"

# T1 owns app metadata & window glue. T3 (this crate) owns the IPC commands
# in src/commands/*.rs and ships nothing UI-side. T1 is expected to add a
# `mod commands;` declaration and call `commands::register(builder)` from
# within their `main.rs` builder chain. Do not regenerate `main.rs` here.

[lib]
name = "tangerine_meeting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"

# v1.6.0 team memory sync.
# `keyring` stores GitHub OAuth tokens on the OS keychain (Windows Credential
# Manager / macOS Keychain / Linux Secret Service) so we don't have to ship a
# raw .credentials.json with mode 0600. Falls back gracefully when the OS
# keychain isn't available — the token-store layer covers both code paths.
keyring = "2"
# `urlencoding` for the tangerine:// invite URL builder. base64 + sha2 used
# by the invite-token codec. Keep deps lean — these are tiny and pure-Rust.
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
# v1.6.0: localhost ws server for the browser extension. Pure-Rust ws stack
# (rustls under the hood, but we never accept TLS — bind plain ws on 127.0.0.1
# only). `futures-util` is already pulled in transitively by tauri but we name
# it here so the ws_server module can `use futures_util::*` directly.
tokio-tungstenite = "0.21"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

notify = "6"
notify-debouncer-mini = "0.4"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# v1.8 Phase 2-D — Email source (IMAP digest).
#
# `imap` 3.0 is the maintained fork of the original abandoned crate; pairs with
# `native-tls` for STARTTLS / IMAPS over 993. We deliberately use the
# blocking interface inside `tokio::task::spawn_blocking` (same pattern the
# daemon uses for `git pull`) rather than chasing async-imap, which has thinner
# Tangerine-side ergonomics and a smaller dep churn budget.
#
# `mailparse` parses RFC 5322 messages (headers + multipart bodies). Pure-Rust,
# zero alloc on header reads — fits the lean dep tree.
# 3.x is alpha-only on crates.io; pinning to the latest published alpha keeps
# the dep tree resolvable without forcing `--allow-prerelease`. (Sibling
# Phase 2-D agent introduced this dep; the unpinned `"3"` failed to resolve.)
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
mailparse = "0.15"
# `base64` is already pulled in for invite tokens; the email source reuses it
# to decode RFC 2047 encoded subjects when mailparse hands back raw bytes.

# v1.8 Phase 2-D — Voice notes source.
#
# `base64` is already in the tree; voice notes piggy-back on it to receive
# audio blobs from the React MediaRecorder layer. WAV writing is hand-rolled
# (16 kHz mono PCM is a 44-byte header) so we avoid a dedicated audio crate
# whose feature surface would dwarf the actual bytes-of-code we need.

thiserror = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "winbase"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
