[package]
name = "tangerine-meeting"
version = "1.22.0"
description = "Tangerine AI Teams — desktop shell for the Tangerine Meeting Assistant CLI"
authors = ["Tangerine Intelligence Inc."]
# DRAFT — license flip pending CEO + legal counsel ratification.
# Until ratification, the active license is Apache-2.0
# (see ../../PRIOR-LICENSE-APACHE-2.0.txt). The SPDX expression below
# encodes the post-ratification dual-license target (AGPL v3 + commercial).
license = "AGPL-3.0-or-later AND LicenseRef-Tangerine-Commercial"
repository = "https://github.com/Tangerine-Intelligence/tangerine-meeting-live"
edition = "2021"
rust-version = "1.78"

# T1 owns app metadata & window glue. T3 (this crate) owns the IPC commands
# in src/commands/*.rs and ships nothing UI-side. T1 is expected to add a
# `mod commands;` declaration and call `commands::register(builder)` from
# within their `main.rs` builder chain. Do not regenerate `main.rs` here.

[lib]
name = "tangerine_meeting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# v1.8 Phase 4-A — `tray-icon` feature pulls in TrayIconBuilder so we can
# show "AGI: N proposals" in the system tray. The watcher polls
# `~/.tangerine-memory/agi/proposals/` every 60s.
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
# === v1.14.3 round-4 ===
# `tauri-plugin-shell::open` was deprecated in plugin-shell 2.x in favor of
# the standalone `tauri-plugin-opener` crate. The single callsite in
# `commands::external::open_external` now uses `app.opener().open_url(...)`,
# clearing the long-standing deprecation warning surfaced by `cargo check`
# every build. `tauri-plugin-shell` itself stays in the tree because the
# plugin is still registered in `main.rs` for future shell-spawn use; we
# keep it pinned to avoid an unrelated dep churn.
tauri-plugin-opener = "2"
# === end v1.14.3 round-4 ===
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
# === wave 25 === Tauri auto-updater plugin. Pulls a `latest.json` manifest
# from GitHub Releases (see release.yml `Generate latest.json` step), checks
# the running build's version against it, and offers to download + restart.
# The signature pubkey lives in tauri.conf.json under `plugins.updater.pubkey`
# — currently a placeholder so unsigned builds still pass `cargo check`.
# CEO must run `npx tauri signer generate -w ~/.tauri/myapp.key` before
# enabling the matching `TAURI_SIGNING_PRIVATE_KEY` secret in CI for signed
# release artifacts; the placeholder pubkey causes the plugin to refuse
# install (graceful degrade — see `UpdaterCheck.tsx` swallow).
tauri-plugin-updater = "2"
# === end wave 25 ===

# v1.6.0 team memory sync.
# `keyring` stores GitHub OAuth tokens on the OS keychain (Windows Credential
# Manager / macOS Keychain / Linux Secret Service) so we don't have to ship a
# raw .credentials.json with mode 0600. Falls back gracefully when the OS
# keychain isn't available — the token-store layer covers both code paths.
keyring = "2"
# `urlencoding` for the tangerine:// invite URL builder. base64 + sha2 used
# by the invite-token codec. Keep deps lean — these are tiny and pure-Rust.
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
# v1.6.0: localhost ws server for the browser extension. Pure-Rust ws stack
# (rustls under the hood, but we never accept TLS — bind plain ws on 127.0.0.1
# only). `futures-util` is already pulled in transitively by tauri but we name
# it here so the ws_server module can `use futures_util::*` directly.
tokio-tungstenite = "0.21"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

notify = "6"
notify-debouncer-mini = "0.4"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# v1.8 Phase 2-D — Email source (IMAP digest).
#
# `imap` 3.0 is the maintained fork of the original abandoned crate; pairs with
# `native-tls` for STARTTLS / IMAPS over 993. We deliberately use the
# blocking interface inside `tokio::task::spawn_blocking` (same pattern the
# daemon uses for `git pull`) rather than chasing async-imap, which has thinner
# Tangerine-side ergonomics and a smaller dep churn budget.
#
# `mailparse` parses RFC 5322 messages (headers + multipart bodies). Pure-Rust,
# zero alloc on header reads — fits the lean dep tree.
# 3.x is alpha-only on crates.io; pinning to the latest published alpha keeps
# the dep tree resolvable without forcing `--allow-prerelease`. (Sibling
# Phase 2-D agent introduced this dep; the unpinned `"3"` failed to resolve.)
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
mailparse = "0.15"
# `base64` is already pulled in for invite tokens; the email source reuses it
# to decode RFC 2047 encoded subjects when mailparse hands back raw bytes.

# v1.8 Phase 2-D — Voice notes source.
#
# `base64` is already in the tree; voice notes piggy-back on it to receive
# audio blobs from the React MediaRecorder layer. WAV writing is hand-rolled
# (16 kHz mono PCM is a 44-byte header) so we avoid a dedicated audio crate
# whose feature surface would dwarf the actual bytes-of-code we need.

thiserror = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
dirs = "5"

# v1.8 Phase 3 — async traits for the co-thinker brain's `LlmDispatcher`
# trait (P3-B). The crate is already in the lock file as a transitive dep
# of `imap` 3.0-alpha; declaring it here makes it a first-class direct dep
# so `agi::co_thinker` can `use async_trait::async_trait` reliably.
async-trait = "0.1"

# === wave 1.13-C ===
# `regex` powers the heuristic mention extractor in `agi::mention_extractor`.
# Already a transitive dep (via tracing-subscriber's `env-filter`), promoted
# here so the extractor can use it directly without leaning on a re-export.
regex = "1"
# === end wave 1.13-C ===

# === v1.15.0 wave 1.3 — REMOVED in v1.16 ===
# `toml` was pulled in to power the Codex MCP config writer. v1.16 PIVOT
# (W1A2): Tangerine no longer writes MCP entries — capture is read-only
# from log files. The Codex `~/.codex/config.toml` writer was deleted
# along with the rest of the v15 configure pipeline; no other Rust source
# uses `toml`, so the dep is dropped to keep the dep tree lean.
# === end v1.15.0 wave 1.3 ===

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "winbase"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# === v1.15.2 Fix #5 — REMOVED in v1.16 ===
# `tests/spawn_handshake_e2e.rs` was deleted by W1A2 along with the
# `mcp-server/` npm package. The test spawned `npx -y tangerine-mcp@^0.1.0`
# and asserted on the in-process sampling-bridge registry; both the package
# and the registry are gone in v1.16. No replacement test is wired here —
# the W2 capture-side handshake will get its own integration test.
# === end v1.15.2 Fix #5 ===

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
